--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1401,6 +1401,16 @@
   timestamp = {2020.08.11},
 }
 
+@InProceedings{Alrahabi2023,
+  author    = {Alrahabi, M. and Fedchenko, V. and Petkovic, L. and Roe, G.},
+  title     = {Pandore: a toolbox for digital humanities text-based workflows},
+  booktitle = {Digital Humanities Conference},
+  year      = {2023},
+  owner     = {Vincent},
+  timestamp = {2023.12.26},
+  url       = {https://zenodo.org/records/8107733},
+}
+
 @InProceedings{Alrashid2021,
   author    = {Alrashid, T. and Gaizauskas, R.},
   title     = {A Pilot Study on Annotating Scenes in Narrative Text using SceneML},
@@ -1558,6 +1568,27 @@
   url       = {https://cloud.klmp200.net/index.php/s/f7YRqcW9oAwwLKd},
 }
 
+@InProceedings{Amalvy2022,
+  author    = {Amalvy, A. and Dufour, R. and Labatut, V.},
+  title     = {{BERT} meets {d'Artagnan}: Data Augmentation for Robust Character Detection in Novels},
+  booktitle = {Workshop on Computational Methods in the Humanities},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.02.08},
+  url       = {https://wp.unil.ch/llist/files/2022/06/COMHUM_2022_paper_20.pdf},
+}
+
+@InProceedings{Amalvy2022a,
+  author    = {Amalvy, A. and Labatut, V. and Dufour, R.},
+  title     = {Remplacement de mentions pour l’adaptation d’un corpus dereconnaissance d’entités nommées à un domaine cible},
+  booktitle = {29ème Conférence sur le Traitement Automatique des Langues Naturelles},
+  year      = {2022},
+  pages     = {198-205},
+  owner     = {Vincent},
+  timestamp = {2022.03.04},
+  url       = {https://aclanthology.org/2022.jeptalnrecital-taln.19/},
+}
+
 @InProceedings{Amalvy2023,
   author    = {Amalvy, A. and Labatut, V. and Dufour, R.},
   title     = {The Role of Global and Local Context in Named Entity Recognition},
@@ -1567,6 +1598,17 @@
   doi       = {10.18653/v1/2023.acl-short.62},
   owner     = {Vincent},
   timestamp = {2023.05.03},
+}
+
+@InProceedings{Amalvy2023a,
+  author    = {Amalvy, A. and Labatut, V. and Dufour, R.},
+  title     = {Learning to Rank Context for Named Entity Recognition Using a Synthetic Dataset},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2023},
+  pages     = {10372-10382},
+  owner     = {Vincent},
+  timestamp = {2023.10.08},
+  url       = {https://aclanthology.org/2023.emnlp-main.642},
 }
 
 @Article{Amancio2012,
@@ -1869,6 +1911,18 @@
   owner     = {Vincent},
   timestamp = {2022.03.25},
   url       = {http://ceur-ws.org/Vol-2769/},
+}
+
+@Article{Andresen2022,
+  author    = {Andresen, M. and Krautter, B. and Pagel, J. and Reiter, N.},
+  title     = {Who Knows What in German Drama? A Composite Annotation Scheme for Knowledge Transfer. Annotation, Evaluation, and Analysis},
+  journal   = {Journal of Computational Literary Studies},
+  year      = {2022},
+  volume    = {1},
+  number    = {1},
+  doi       = {10.48694/JCLS.107},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Book{Andrew1984,
@@ -4628,6 +4682,17 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://biblio.ugent.be/publication/974367},
+}
+
+@InProceedings{Bendahman2023,
+  author    = {Bendahman, N. and Lotfi, D.},
+  title     = {A Novel Centrality based Measure for Influential Nodes Detection in Social Networks},
+  booktitle = {10th International Conference on Wireless Networks and Mobile Communications},
+  year      = {2023},
+  pages     = {1-7},
+  doi       = {10.1109/wincom59760.2023.10322968},
+  owner     = {Vincent},
+  timestamp = {2023.12.16},
 }
 
 @Article{BenderPeterson1990,
@@ -8742,7 +8807,7 @@
   year      = {2006},
   volume    = {49},
   number    = {4},
-  pages     = {523–529},
+  pages     = {523-529},
   doi       = {10.1140/epjb/e2006-00091-3},
   owner     = {Vincent},
   timestamp = {2023.11.29},
@@ -10919,7 +10984,7 @@
   year      = {2005},
   volume    = {9},
   number    = {3},
-  pages     = {6–17},
+  pages     = {6-17},
   doi       = {10.1108/13673270510602737},
   owner     = {Vincent},
   timestamp = {2023.11.30},
@@ -11442,6 +11507,16 @@
   url       = {https://www.utstat.toronto.edu/~brunner/oldclass/378f16/readings/CohenPower.pdf},
 }
 
+@Book{Cohen1999,
+  title     = {The Sentimental Education of the Novel},
+  publisher = {Princeton University Press},
+  year      = {1999},
+  author    = {Cohen, M.},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://press.princeton.edu/books/paperback/9780691095882/the-sentimental-education-of-the-novel},
+}
+
 @Article{Cohen2003b,
   author    = {Cohen, R. and Havlin, S.},
   title     = {Scale-Free Networks are Ultrasmall},
@@ -11453,6 +11528,19 @@
   doi       = {10.1103/PhysRevLett.90.058701},
   owner     = {Vincent},
   timestamp = {2015.07.13},
+}
+
+@Article{Cohen2009,
+  author    = {Cohen, M.},
+  title     = {Narratology in the Archive of Literature},
+  journal   = {Representations},
+  year      = {2009},
+  volume    = {108},
+  number    = {1},
+  pages     = {51–75},
+  doi       = {10.1525/rep.2009.108.1.51},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Book{Cohen2013,
@@ -12426,6 +12514,16 @@
   url       = {https://study.sagepub.com/croteau5e},
 }
 
+@Book{Crystal2008,
+  title     = {A Dictionary of Linguistics and Phonetics},
+  publisher = {Wiley},
+  year      = {2008},
+  author    = {Crystal, D.},
+  doi       = {10.1002/9781444302776},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Article{Csardi2006,
   author    = {Csardi, G. and Nepusz, T.},
   title     = {The igraph Software Package for Complex Network Research},
@@ -13095,6 +13193,19 @@
   doi       = {10.1016/j.concog.2004.07.007},
   owner     = {Vincent},
   timestamp = {2022.06.21},
+}
+
+@Article{Darnton1989,
+  author    = {Darnton, R. C.},
+  title     = {The Forbidden Bestsellers of Prerevolutionary France},
+  journal   = {Bulletin of the American Academy of Arts and Sciences},
+  year      = {1989},
+  volume    = {43},
+  number    = {1},
+  pages     = {17},
+  doi       = {10.2307/3824903},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @InProceedings{Das2010,
@@ -14729,6 +14840,19 @@
   timestamp = {2023.08.08},
 }
 
+@Article{Douguet2017,
+  author    = {Douguet, M.},
+  title     = {{MAnaDram} : un moteur d’analyse pour l’extraction et le repérage des motifs dramaturgiques},
+  journal   = {Revue d’Historiographie du Théâtre},
+  year      = {2017},
+  volume    = {4},
+  number    = {4},
+  pages     = {4},
+  owner     = {Vincent},
+  timestamp = {2023.12.15},
+  url       = {https://sht.asso.fr/manadram-un-moteur-danalyse-pour-lextraction-et-le-reperage-des-motifs-dramaturgiques/},
+}
+
 @Article{Douze2010,
   author    = {Douze, M. and Jegou, H. and Schmid, C.},
   title     = {An Image-Based Approach to Video Copy Detection With Spatio-Temporal Post-Filtering},
@@ -16026,6 +16150,20 @@
   doi       = {10.1075/rs.19006.egb},
   owner     = {Vincent},
   timestamp = {2022.12.06},
+}
+
+@InProceedings{Egloff2019,
+  author    = {Egloff, M. and Picca, D. and Adamou, A.},
+  title     = {Extraction of Character Profiles from the Gutenberg Archive},
+  booktitle = {Research Conference on Metadata and Semantics Research},
+  year      = {2019},
+  volume    = {1057},
+  series    = {Communications in Computer and Information Science},
+  pages     = {367-372},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-36599-8_32},
+  owner     = {Vincent},
+  timestamp = {2023.12.07},
 }
 
 @Article{Eguiluz2005,
@@ -17751,7 +17889,7 @@
   year      = {2005},
   volume    = {44},
   number    = {2},
-  pages     = {249–257},
+  pages     = {249-257},
   doi       = {10.1140/epjb/e2005-00121-8},
   owner     = {Vincent},
   timestamp = {2023.11.29},
@@ -18088,6 +18226,19 @@
   owner     = {Vincent},
   timestamp = {2019.06.24},
   url       = {https://dh2017.adho.org/abstracts/071/071.pdf},
+}
+
+@Article{Fischer2017b,
+  author    = {Fischer, F. and Dazord, G. and Göbel, M. and Kittel, C. and Trilcke, P.},
+  title     = {Le drame comme réseau de relations. Une application de l’analyse automatisée pour l’histoire littéraire du théâtre},
+  journal   = {Revue d’Historiographie du Théâtre},
+  year      = {2017},
+  volume    = {4},
+  number    = {4},
+  pages     = {5},
+  owner     = {Vincent},
+  timestamp = {2023.12.15},
+  url       = {https://sht.asso.fr/le-drame-comme-reseau-de-relations-une-application-de-lanalyse-automatisee-pour-lhistoire-litteraire-du-theatre/},
 }
 
 @Electronic{Fischer2018,
@@ -19542,6 +19693,19 @@
   url       = {https://books.google.fr/books?id=r11ZAAAAMAAJ},
 }
 
+@Article{Galleron2017,
+  author    = {Galleron, I.},
+  title     = {Parler de soi, parler aux autres : statistiques des `` pronoms de dialogue '' et classifications des personnages de théâtre},
+  journal   = {Revue d’Historiographie du Théâtre},
+  year      = {2017},
+  volume    = {4},
+  number    = {4},
+  pages     = {7},
+  owner     = {Vincent},
+  timestamp = {2023.12.15},
+  url       = {https://sht.asso.fr/parler-de-soi-parler-aux-autres-statistiques-des-pronoms-de-dialogue-et-classifications-des-personnages-de-theatre/},
+}
+
 @Article{Gallese1998,
   author    = {Gallese, V.},
   title     = {Mirror neurons and the simulation theory of mind-reading},
@@ -20691,6 +20855,18 @@
   timestamp = {2020.01.05},
 }
 
+@Article{Gius2022,
+  author    = {Gius, E. and Jacke, J.},
+  title     = {Are Computational Literary Studies Structuralist?},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2022},
+  volume    = {7},
+  number    = {4},
+  doi       = {10.22148/001c.46662},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Electronic{Glander2017,
   author       = {Glander, S.},
   month        = {05},
@@ -20874,6 +21050,19 @@
   url          = {https://resultats.hypotheses.org/749},
   owner        = {Vincent},
   timestamp    = {2023.09.27},
+}
+
+@Article{Glorieux2017,
+  author    = {Glorieux, F.},
+  title     = {Les confidents du théâtre classique. Essai d’enquête quantitative},
+  journal   = {Revue d’Historiographie du Théâtre},
+  year      = {2017},
+  volume    = {4},
+  number    = {4},
+  pages     = {6},
+  owner     = {Vincent},
+  timestamp = {2023.12.15},
+  url       = {https://sht.asso.fr/les-confidents-du-theatre-classique-essai-denquete-quantitative/},
 }
 
 @Article{Godden1975,
@@ -24346,6 +24535,18 @@
   timestamp = {2019.04.01},
 }
 
+@Article{Herrmann2017,
+  author    = {Herrmann, J. B.},
+  title     = {In a Test Bed with Kafka: Introducing a Mixed-Method Approach to Digital Stylistics},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2017},
+  volume    = {11},
+  number    = {4},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {http://www.digitalhumanities.org/dhq/vol/11/4/000341/000341.html},
+}
+
 @Article{Hertwig2009,
   author    = {Hertwig, R. and Herzog, S. M.},
   title     = {Fast and Frugal Heuristics: Tools of Social Rationality},
@@ -24378,6 +24579,19 @@
   doi       = {10.1109/DEXA.2015.62},
   owner     = {Vincent},
   timestamp = {2017.12.16},
+}
+
+@Article{Heuser2011,
+  author    = {Heuser, R. and Le-Khac, L.},
+  title     = {Learning to Read Data: Bringing out the Humanistic in the Digital Humanities},
+  journal   = {Victorian Studies},
+  year      = {2011},
+  volume    = {54},
+  number    = {1},
+  pages     = {79-86},
+  doi       = {10.2979/victorianstudies.54.1.79},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
 }
 
 @Article{Heuser2016,
@@ -25431,6 +25645,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@InCollection{Houston2024,
+  author    = {Houston, N. M.},
+  title     = {Meaningful Aesthetics: A Comparison of Open Source Network Analysis Tools},
+  booktitle = {Zoomland: Exploring Scale in Digital History and Humanities},
+  publisher = {De Gruyter Oldenbourg},
+  year      = {2024},
+  doi       = {10.1515/9783111317779-014},
+  owner     = {Vincent},
+  timestamp = {2023.12.21},
+}
+
 @Article{Hout2012,
   author    = {Hout, M. C. and Papesh, M. H. and Goldinger, S. D.},
   title     = {Multidimensional scaling},
@@ -26174,7 +26399,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2017},
   volume    = {55},
   number    = {7},
-  pages     = {607–618},
+  pages     = {607-618},
   doi       = {10.1080/0163853x.2017.1332446},
   owner     = {Vincent},
   timestamp = {2023.11.28},
@@ -26280,6 +26505,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-642-15390-7_4},
   owner     = {Vincent},
   timestamp = {2022.06.29},
+}
+
+@InProceedings{Ilkhomjon2023,
+  author        = {Ilkhomjon, S. and Yang, Y. and Peng, S. and Siet, S. and Kim, D.-Y. and Park, D.-S.},
+  title         = {Movie Recommendation System using Community Detection and Parallel Programming},
+  booktitle     = {Korea Information Processing Society Conference},
+  year          = {2023},
+  pages         = {389-391},
+  __markedentry = {[Vincent:]},
+  doi           = {10.3745/PKIPS.y2023m05a.389},
+  owner         = {Vincent},
+  timestamp     = {2023.12.24},
 }
 
 @InProceedings{Ilyas2011,
@@ -27790,7 +28027,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Cognitive Processing},
   year      = {2019},
   volume    = {21},
-  pages     = {1–21},
+  pages     = {1-21},
   doi       = {10.1007/s10339-019-00934-x},
   owner     = {Vincent},
   timestamp = {2023.11.28},
@@ -30739,6 +30976,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dh2018.adho.org/quantitative-microanalysis-different-methods-of-digital-drama-analysis-in-comparison/},
 }
 
+@InCollection{Krautter2024,
+  author    = {Krautter, B.},
+  title     = {The Scales of (Computational) Literary Studies: Martin Mueller’s Concept of Scalable Reading in Theory and Practice},
+  booktitle = {Zoomland: Exploring Scale in Digital History and Humanities},
+  publisher = {De Gruyter Oldenbourg},
+  year      = {2024},
+  doi       = {10.1515/9783111317779-011},
+  owner     = {Vincent},
+  timestamp = {2023.12.21},
+}
+
 @Article{Kreiman2000,
   author    = {Kreiman, G. and Koch, C. and Fried, I.},
   title     = {Category-specific visual responses of single neurons in the human medial temporal lobe},
@@ -33130,6 +33378,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.05.14},
   url       = {https://dl.acm.org/doi/abs/10.5555/3535850.3536071},
+}
+
+@InProceedings{Leong2023,
+  author    = {Leong, W. and Porteous, J. and Thangarajah, J.},
+  title     = {Story Sifting Using Object Detection Techniques},
+  booktitle = {Australasian Joint Conference on Artificial Intelligence},
+  year      = {2023},
+  volume    = {14471},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {42-54},
+  publisher = {Springer},
+  doi       = {10.1007/978-981-99-8388-9_4},
+  owner     = {Vincent},
+  timestamp = {2023.12.02},
 }
 
 @InProceedings{Leordeanu2005,
@@ -39944,6 +40206,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=BKkNAQAAMAAJ},
 }
 
+@Article{Moretti2006a,
+  author    = {Moretti, F.},
+  title     = {The End of the Beginning. A Reply to Christopher Prendergast},
+  journal   = {New Left Review},
+  year      = {2006},
+  volume    = {41},
+  pages     = {71-86},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://newleftreview.org/issues/ii41/articles/franco-moretti-the-end-of-the-beginning.pdf},
+}
+
 @Article{Moretti2009,
   author    = {Moretti, F.},
   title     = {Style, Inc. Reflections on Seven Thousand Titles (British Novels, 1740-1850)},
@@ -40456,6 +40730,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.12},
 }
 
+@Article{Mueller2005,
+  author    = {Mueller, M.},
+  title     = {The Nameless Shakespeare},
+  journal   = {Digital Studies / Le champ numérique},
+  year      = {2005},
+  volume    = {11},
+  doi       = {10.16995/dscn.249},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @InProceedings{Mueller2006,
   author    = {Müller, C. and Strube, M.},
   title     = {Multi-level annotation of linguistic data with MMAX2},
@@ -40478,6 +40763,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/17450910802295179},
   owner     = {Vincent},
   timestamp = {2021.06.21},
+}
+
+@Article{Mueller2014,
+  author    = {Mueller, M.},
+  title     = {Shakespeare His Contemporaries: Collaborative Curation and Exploration of Early Modern Drama in a Digital Environment},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2014},
+  volume    = {8},
+  number    = {3},
+  pages     = {1-41},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {http://digitalhumanities.org:8081/dhq/vol/8/3/000183/000183.html},
 }
 
 @InProceedings{Mugelli2017,
@@ -43081,7 +43379,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2016},
   volume    = {25},
   number    = {sup1},
-  pages     = {512–526},
+  pages     = {512-526},
   doi       = {10.1080/12460125.2016.1193930},
   owner     = {Vincent},
   timestamp = {2023.11.30},
@@ -43201,6 +43499,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2012.08.24},
   url         = {http://ilpubs.stanford.edu:8090/422/},
+}
+
+@InProceedings{Pagel2020,
+  author    = {Pagel, J. and Reiter, N.},
+  title     = {{GerDraCor-Coref}: A Coreference Corpus for Dramatic Texts in German},
+  booktitle = {12th Conference on Language Resources and Evaluation},
+  year      = {2020},
+  pages     = {55-64},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://aclanthology.org/2020.lrec-1.7/},
 }
 
 @Book{Paige2011,
@@ -44268,6 +44577,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.11.22},
 }
 
+@InCollection{Pereira2019,
+  author    = {Sá Pereira, Moacir P.},
+  title     = {Mixed Methodological Digital Humanities},
+  booktitle = {Debates in the Digital Humanities},
+  publisher = {University of Minnesota Press},
+  year      = {2019},
+  pages     = {405-412},
+  doi       = {10.5749/j.ctvg251hk.37},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+}
+
 @Article{Perer2006,
   author    = {Perer, A. and Shneiderman, B.},
   title     = {Balancing Systematic and Flexible Exploration of Social Networks},
@@ -45194,7 +45515,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2014},
   volume    = {32},
   number    = {1},
-  pages     = {1–23},
+  pages     = {1-23},
   doi       = {10.1353/lm.2014.0010},
   owner     = {Vincent},
   timestamp = {2023.11.30},
@@ -45521,6 +45842,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://www.jstor.org/stable/3685614},
+}
+
+@Article{Prendergast2005a,
+  author    = {Prendergast, C.},
+  title     = {Evolution and Literary History: A Response to {F}ranco {M}oretti},
+  journal   = {New Left Review},
+  year      = {2005},
+  volume    = {34},
+  pages     = {40-62},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://newleftreview.org/issues/ii34/articles/christopher-prendergast-evolution-and-literary-history},
 }
 
 @Book{Preparata1985,
@@ -46281,6 +46614,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/10.5406/j.ctt1xcmrr},
 }
 
+@InCollection{Ramsay2013,
+  author    = {Ramsay, S.},
+  title     = {Algorithmic Criticism},
+  booktitle = {A Companion to Digital Literary Studies},
+  publisher = {Wiley-Blackwell},
+  year      = {2013},
+  pages     = {477-491},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://companions.digitalhumanities.org/DLS/?chapter=content/9781405148641_chapter_26.html},
+}
+
 @Book{Rana2002,
   title     = {An Introduction to Measure and Integration},
   publisher = {American Mathematical Society},
@@ -46519,7 +46864,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2009},
   volume    = {17},
   number    = {2},
-  pages     = {139–142},
+  pages     = {139-142},
   doi       = {10.1057/jt.2009.5},
   owner     = {Vincent},
   timestamp = {2023.11.28},
@@ -51131,7 +51476,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2021},
   volume    = {25},
   number    = {8},
-  pages     = {1889–1925},
+  pages     = {1889-1925},
   doi       = {10.1108/jkm-09-2020-0730},
   owner     = {Vincent},
   timestamp = {2023.11.30},
@@ -51807,7 +52152,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2002},
   volume    = {99},
   number    = {3},
-  pages     = {1742–1747},
+  pages     = {1742-1747},
   doi       = {10.1073/pnas.022341799},
   owner     = {Vincent},
   timestamp = {2023.11.29},
@@ -52022,7 +52367,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2016},
   volume    = {529},
   number    = {7587},
-  pages     = {484–489},
+  pages     = {484-489},
   doi       = {10.1038/nature16961},
   owner     = {Vincent},
   timestamp = {2023.11.29},
@@ -52714,7 +53059,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2002},
   volume    = {6},
   number    = {2},
-  pages     = {100–111},
+  pages     = {100-111},
   doi       = {10.1108/13673270210424639},
   owner     = {Vincent},
   timestamp = {2023.11.30},
@@ -55251,7 +55596,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2018},
   volume    = {12},
   number    = {2},
-  pages     = {163–182},
+  pages     = {163-182},
   doi       = {10.3366/ijhac.2018.0220},
   owner     = {Vincent},
   timestamp = {2023.11.30},
@@ -55976,7 +56321,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2004},
   volume    = {14},
   number    = {2},
-  pages     = {90–93},
+  pages     = {90-93},
   doi       = {10.1108/09565690410546145},
   owner     = {Vincent},
   timestamp = {2023.11.30},
@@ -56904,6 +57249,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1215/00267929-3570634},
   owner     = {Vincent},
   timestamp = {2019.08.21},
+}
+
+@Article{Underwood2017,
+  author    = {Underwood, T.},
+  title     = {A Genealogy of Distant Reading},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2017},
+  volume    = {11},
+  number    = {2},
+  pages     = {29-35},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {http://www.digitalhumanities.org/dhq/vol/11/2/000317/000317.html},
 }
 
 @Article{Underwood2018,
@@ -58999,6 +59357,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://gweissman.github.io/babelgraph/blog/2017/06/15/greys-anatomy-network-of-sexual-relations.html},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@Article{Weitin2015,
+  author    = {Weitin, T.},
+  title     = {Thinking Slowly: Reading Literature in the Aftermath of Big Data},
+  journal   = {LitLab Pamphlet},
+  year      = {2015},
+  volume    = {1},
+  pages     = {1-17},
+  owner     = {Vincent},
+  timestamp = {2024.01.01},
+  url       = {https://www.digitalhumanitiescooperation.de/wpcontent/uploads/2019/06/p01_weitin-thinking-slowly_en.pdf},
 }
 
 @InCollection{Weitin2023,
